--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
 
                     <h2 class="profile__name">Mark Bello</h2>
-                    <h3 class="profile__profession">FULLSTACK WEB DEVELOPER | DESKTOP DEVELOPER <br> MOBILE DEVELOPER | UI/UX DESIGNER</h3>
+                    <h3 class="profile__profession">FULLSTACK WEB DEVELOPER | ASPIRING (MOBILE DEVELOPER) <br></h3>
 
                     <ul class="profile__social">
                           <a href="https://www.instagram.com/" target="_blank" class="profile__social-link">
@@ -205,7 +205,7 @@
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
                                             <h3 class="skills__name">Javascript</h3>
-                                            <span class="skills__level">Moderate</span>
+                                            <span class="skills__level">Advanced</span>
                                         </div>
                                     </div>
         
@@ -230,15 +230,15 @@
                                     <div class="skills__data">
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
-                                            <h3 class="skills__name">Vue.js</h3>
-                                            <span class="skills__level">Intermediate</span>
+                                            <h3 class="skills__name">Vite</h3>
+                                            <span class="skills__level">Advanced</span>
                                         </div>
                                     </div>
 
                                     <div class="skills__data">
                                         <i class="ri-checkbox-circle-line"></i>
                                         <div>
-                                            <h3 class="skills__name">React.js</h3>
+                                            <h3 class="skills__name">ReactJS</h3>
                                             <span class="skills__level">Intermediate</span>
                                         </div>
                                     </div>
@@ -291,7 +291,6 @@
                                 <div class="skills__group">
                                     <div class="skills__data">
                                         <i class="ri-checkbox-circle-line"></i>
-        
                                         <div>
                                             <h3 class="skills__name">Django</h3>
                                             <span class="skills__level">Moderate</span>
