--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                 <div>
                                     <span class="projects__subtitle">WEB | REACTJS, CSS, TAILWINDCSS,</span>
                                     <h3 class="projects__title">CHATGPT CLONE UI</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a href="https://markbello-chatgpt-clone-ui.netlify.app/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -153,13 +153,13 @@
                         </article> 
 
                         <article class="projects__card">
-                            <img src="assets/img/perfil2" alt="" class="projects__img">
+                            <img src="assets/img/MARKBELLOPARALLAXEFFECT.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Mobile</span>
-                                    <h3 class="projects__title">Null</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <span class="projects__subtitle">WEB | HTML, CSS, JAVASCRIPT</span>
+                                    <h3 class="projects__title">M4RKBELLO PARALLAX EFFECT</h3>
+                                    <a href="https://markbello-parallax-effect.netlify.app/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
