--- a/index.html
+++ b/index.html
@@ -107,6 +107,20 @@
                 <div class="filters__sections">
                     <!--=============== PROJECTS ===============-->
                     <div class="projects__content grid filters__active" data-content id="projects">
+
+                        <article class="projects__card">
+                            <img src="assets/img/DTRMS+.jpg" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">WEB | REACTJS, TAILWINDCSS, DAISYUI, REDUX, AXIOS, LARAVEL, MYSQL</span>
+                                    <h3 class="projects__title">DAILY TIME RECORD MONITORING SYSTEM USING QRCODE (SPA)</h3>
+                                    <a href="https://markbello-dtrms.netlify.app/" class="projects__button button button__small">
+                                        <i class="ri-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
                
                     
 
@@ -139,13 +153,13 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="assets/img/perfil2" alt="" class="projects__img">
+                            <img src="assets/img/MARKBELLOREDUXCRUD.jpg" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Mobile</span>
-                                    <h3 class="projects__title">Null</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <span class="projects__subtitle">WEB | REACTJS, TAILWINDCSS, REDUX</span>
+                                    <h3 class="projects__title">REDUX STATE MANAGEMENT CRUD </h3>
+                                    <a href="https://markbello-redux-state-management-crud.netlify.app/" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
@@ -168,13 +182,13 @@
 
                         <article class="projects__card">
                             <!-- Insert your image in a rectangular format (Ex: 600 x 400, 1000 x 800, 1200 x 1000, etc) -->
-                            <img src="assets/img/4.png" alt="" class="projects__img">
+                            <img src="assets/img/1.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
                                     <span class="projects__subtitle">WEB | HTML, CSS, BOOTSTRAP, JAVASCRIPT, JQUERY-AJAX, PHP, MYSQL</span>
                                     <h3 class="projects__title">PUROK MONITORING MANAGEMENT SYSTEM(PMMS)</h3>
-                                    <a href="#" class="projects__button button button__small">
+                                    <a href="https://github.com/m4rkbello/PMMS" class="projects__button button button__small">
                                         <i class="ri-link"></i>
                                     </a>
                                 </div>
