--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <i class="ri-facebook-line"></i>
             </a>
             <a
-              href="https://www.instagram.com/"
+              href="https://www.instagram.com/m4rkbello/"
               target="_blank"
               class="profile__social-link"
             >
@@ -72,7 +72,7 @@
               <i class="ri-github-line"></i>
             </a>
             <a
-              href="https://github.com/m4rkbello"
+              href="https://www.youtube.com/@m4rkbello?sub_confirmation=1"
               target="_blank"
               class="profile__social-link"
             >
@@ -153,21 +153,19 @@
             class="projects__content grid filters__active"
             data-content
             id="projects"
-          >
+            >
             <article class="projects__card">
-              <img src="assets/img/DTRMS+.jpg" alt="" class="projects__img" />
-
+              <img src="assets/img/TEMPORARY.jpg" alt="" class="projects__img" />
               <div class="projects__modal">
                 <div>
                   <span class="projects__subtitle"
-                    >WEB | REACTJS, TAILWINDCSS, DAISYUI, REDUX, AXIOS, LARAVEL,
-                    MYSQL</span
+                    >ON WORKING...</span
                   >
                   <h3 class="projects__title">
-                    DAILY TIME RECORD MONITORING SYSTEM USING QRCODE (SPA)
+                    ON WORKING...
                   </h3>
                   <a
-                    href="https://markbello-dtrms.netlify.app/"
+                    href="https://github.com/m4rkbello"
                     class="projects__button button button__small"
                   >
                     <i class="ri-link"></i>
