--- a/index.html
+++ b/index.html
@@ -175,6 +175,26 @@
             </article>
 
             <article class="projects__card">
+                <img src="assets/img/DTRMS+.jpg" alt="" class="projects__img" />
+                <div class="projects__modal">
+                  <div>
+                    <span class="projects__subtitle"
+                      >WEB | REACTJS, TAILWINDCSS, DAISYUI, REDUX, AXIOS, LARAVEL, MYSQL</span
+                    >
+                    <h3 class="projects__title">
+                      DTRMS+
+                    </h3>
+                    <a
+                      href="https://markbello-dtrms.netlify.app/"
+                      class="projects__button button button__small"
+                    >
+                      <i class="ri-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </article>
+
+            <article class="projects__card">
               <img
                 src="assets/img/MARKBELLOCALCULATOR.jpg"
                 alt=""
