--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                     <i class="ri-checkbox-circle-line"></i>
                     <div>
                       <h3 class="skills__name">ElectronJS</h3>
-                      <span class="skills__level">nner</span>
+                      <span class="skills__level">Beginner</span>
                     </div>
                   </div>
                 </div>
